--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # This file lists all contributors to the repository.                                                                                  
 bfcastro <baffourcastro@gmail.com>
+Daniel Chebet <133492659+kipsamoh@users.noreply.github.com>
 kipsamoh <kipsamoh@gmail.com>
